# orbit

./: dev.alextren.Orbit.json  meson.build
data/: dev.alextren.Orbit.appdata.xml.in  dev.alextren.Orbit.desktop.in  dev.alextren.Orbit.gschema.xml  meson.build
po/: POTFILES  meson.build
src/: main.py  meson.build  orbit.gresource.xml  orbit.in  window.py  window.ui
src/game/: circle.py  game.py  player.py  scene.py
